--- a/search.html
+++ b/search.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <style>
+        body {
+            backgroubd-color: #101720;
+        }
         .center-container {
             display: flex;
             flex-direction: column;
@@ -32,7 +35,7 @@
         }
 
         .frame {
-            width: 100%;
+            width: 100vw;
             height: 100vh;
             border: none;
             bottom: 0;
