--- a/load.html
+++ b/load.html
@@ -17,6 +17,8 @@
       <iframe allowfullscreen frameborder="0" id="frame"></iframe>
       <div id="gameInfo">
         <div class="gameHeader">
+          <img id="gameImage" alt="icon" />
+          <h3 id="gameTitle"></h3>
         </div>
         <p id="gameDescription"></p>
       </div>
