--- a/load.html
+++ b/load.html
@@ -11,33 +11,36 @@
   <script src="/uv/uv.config.js"></script>
   <script src="./js/preload.js"></script>
 
-  <script type="text/javascript">
-    atOptions = {
-      'key': '8d57283b953b8b546d6a04d4deac19dc',
-      'format': 'iframe',
-      'height': 250,
-      'width': 300,
-      'params': {}
-    };
-  </script>
+  <style>
+    html, body {
+        height: 100%;
+        margin: 0;
+    }
+
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        height: 100vh;
+        overflow: hidden; /* Prevents scrolling */
+    }
+
+    iframe {
+        width: 100vw;
+        height: 100vh;
+        border: none;
+    }
+  </style>
 </head>
 
 <body theme="main">
-  <div class="gamecontainer">
-    <iframe allowfullscreen frameborder="0" id="frame"></iframe>
-    <div id="gameInfo">
-      <div class="gameHeader">
-        <img id="gameImage" alt="icon" />
-        <h3 id="gameTitle"></h3>
-      </div>
-      <p id="gameDescription"></p>
-      </div>
-    </div>
-    </body>
+  <iframe allowfullscreen frameborder="0" id="frame"></iframe>
 
-<script src="./js/index.js"></script>
-<script src="./assets/data/games.js"></script>
-<script src="./assets/data/apps.js"></script>
-<script src="./js/load.js"></script>
+  <script src="./js/index.js"></script>
+  <script src="./assets/data/games.js"></script>
+  <script src="./assets/data/apps.js"></script>
+  <script src="./js/load.js"></script>
+</body>
 
 </html>
