--- a/load.html
+++ b/load.html
@@ -10,6 +10,15 @@
   <script src="/uv/uv.bundle.js" charset="UTF-8"></script>
   <script src="/uv/uv.config.js"></script>
   <script src="./js/preload.js"></script>
+  <script type="text/javascript">
+    atOptions = {
+      'key': '8d57283b953b8b546d6a04d4deac19dc',
+      'format': 'iframe',
+      'height': 250,
+      'width': 300,
+      'params': {}
+    };
+  </script>
 
   <style>
     html, body {
