--- a/load.html
+++ b/load.html
@@ -10,6 +10,7 @@
   <script src="/uv/uv.bundle.js" charset="UTF-8"></script>
   <script src="/uv/uv.config.js"></script>
   <script src="./js/preload.js"></script>
+
   <script type="text/javascript">
     atOptions = {
       'key': '8d57283b953b8b546d6a04d4deac19dc',
@@ -19,37 +20,18 @@
       'params': {}
     };
   </script>
-
-  <style>
-    html, body {
-        height: 100%;
-        margin: 0;
-    }
-
-    body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100vw;
-        height: 100vh;
-        overflow: hidden; /* Prevents scrolling */
-    }
-
-    iframe {
-        width: 100vw;
-        height: 100vh;
-        border: none;
-    }
-  </style>
 </head>
 
 <body theme="main">
-  <iframe allowfullscreen frameborder="0" id="frame"></iframe>
 
-  <script src="./js/index.js"></script>
-  <script src="./assets/data/games.js"></script>
-  <script src="./assets/data/apps.js"></script>
-  <script src="./js/load.js"></script>
+  <div class="gamecontainer">
+    <iframe allowfullscreen frameborder="0" id="frame"></iframe>
+  </div>
 </body>
+
+<script src="./js/index.js"></script>
+<script src="./assets/data/games.js"></script>
+<script src="./assets/data/apps.js"></script>
+<script src="./js/load.js"></script>
 
 </html>
