--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <style>
         body {
-            backgroubd-color: #101720;
+            background-color: #101720;
         }
         .center-container {
             display: flex;
